tests/ui/integer_wrong_type.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
 --> tests/ui/integer_wrong_type.rs:5:8
  |
5 | struct BadId(String);
  |        ^^^^^ ------ this field does not implement `Copy`

error[E0308]: mismatched types
 --> tests/ui/integer_wrong_type.rs:3:10
  |
3 | #[derive(IntegerIdentifier)]
  |          ^^^^^^^^^^^^^^^^^
  |          |
  |          expected `String`, found `u64`
  |          arguments to this function are incorrect
  |
note: tuple struct defined here
 --> tests/ui/integer_wrong_type.rs:5:8
  |
5 | struct BadId(String);
  |        ^^^^^
  = note: this error originates in the derive macro `IntegerIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
 --> tests/ui/integer_wrong_type.rs:3:10
  |
3 | #[derive(IntegerIdentifier)]
  |          ^^^^^^^^^^^^^^^^^ expected `String`, found `u64`
  |
  = note: `?` operator cannot convert from `u64` to `String`
  = note: this error originates in the derive macro `IntegerIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/integer_wrong_type.rs:3:10
  |
3 | #[derive(IntegerIdentifier)]
  |          ^^^^^^^^^^^^^^^^^
  |          |
  |          expected `String`, found integer
  |          arguments to this function are incorrect
  |
note: tuple struct defined here
 --> tests/ui/integer_wrong_type.rs:5:8
  |
5 | struct BadId(String);
  |        ^^^^^
  = note: this error originates in the derive macro `IntegerIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/integer_wrong_type.rs:3:10
  |
3 | #[derive(IntegerIdentifier)]
  |          ^^^^^^^^^^^^^^^^^
  |          |
  |          expected `u64`, found `String`
  |          expected `u64` because of return type
  |
  = note: this error originates in the derive macro `IntegerIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)
